Significant performance and RAM usage optimizations AppFragment no longer aggregates graph packets (significant RAM improvement) LogFragment and AppFragment filtering optimizations LogFragment now tests each new log entry against filter instead of filtering entire list (significant CPU improvement) Convert LogFragment listData to LinkedList for more efficient pruning when maxLogEntries is reached Improve logfile loading time significantly by adding new entries only to LogFragment and then rebuilding AppFragment after all entries have loaded Fix AppFragment host/port filtering